# HoMM3

./: .gitignore  CMakeLists.txt  HoMM3.cpp  HoMM3.rc  HoMM3.sln  HoMM3.vcxproj  HoMM3.vcxproj.filters  ReadMe.txt  Resource.h  stdafx.cpp
Dependencies/sfml-2.4.2/tools/pkg-config/: sfml-graphics.pc
Dependencies/zlib-1.2.11/: CTestTestfile.cmake
Dependencies/zlib-1.2.8/: Makefile
HoMM3-Lod/: CMakeLists.txt  HoMM3-Lod.vcxproj  HoMM3-Lod.vcxproj.filters  LodFile.cpp  LodFile.h
HoMM3-Lod-Test/: CMakeLists.txt  HoMM3-Lod-Test.cpp  HoMM3-Lod-Test.vcxproj  HoMM3-Lod-Test.vcxproj.filters  ReadMe.txt
HoMM3-Lod-Test/Resources/: h3abp_bm.lod
HoMM3-Lod-Test/Source/: HoMM3-Lod-Test.cpp  stdafx.cpp
HoMM3-Lod-Test/Source/Compression/: PackedRLEHelperUnitTest.cpp  ZHelperUnitTest.cpp
HoMM3-Lod-Test/Source/Resource/: DefUnitTest.cpp  HoMM3-Lod-Test.cpp  HoMM3-LodFile-Test.cpp  LodUnitTest.cpp  PcxUnitTest.cpp
HoMM3-Lod-Test/Test/: ab01_01.pcx
HoMM3-Lod/Include/: Types.hpp  pch.h
HoMM3-Lod/Include/Compression/: ACompressionHelper.hpp  PackedRLEHelper.hpp  RLEHelper.hpp  ZBuffer.hpp  ZHelper.hpp  ZStreambuf.hpp
HoMM3-Lod/Include/Image/: Bitmap.hpp
HoMM3-Lod/Include/Resource/: AResource.hpp  Def.hpp  Lod.h  Lod.hpp  Pcx.hpp
HoMM3-Lod/Source/Compression/: PackedRLEHelper.cpp  RLEHelper.cpp  ZHelper.cpp  ZStreambuf.cpp
HoMM3-Lod/Source/Image/: Bitmap.cpp
HoMM3-Lod/Source/Resource/: Def.cpp  Lod.cpp  Pcx.cpp
